# bb-consent-playground

./: .gitignore  Caddyfile  DEV_BRANCH_TESTS.md  Dockerfile  Makefile  README.md  api-dev-tests.json.gpg  api.json  behave.ini  dev-keycloak-startup.sh  docker-compose.yaml  test-docker-compose.yaml  test-entrypoint.sh
fixtures/: Dockerfile  data.json  entrypoint.sh  generate_signatures.py  main.py  objectid_generator.py  pyproject.toml
gherkin/: Dockerfile  behave.ini  pyproject.toml
gherkin/features/admin_dashboard/data_agreement/: delete_data_agreement.feature
gherkin/features/admin_dashboard/global_data_policy/: global_data_policy.feature
gherkin/features/admin_dashboard/notification/: notification.feature
gherkin/features/data_processing_auditor/: data_processing_auditor.feature
gherkin/features/issue_610/: issue_610.feature
gherkin/features/issue_612/: issue_610.feature  issue_612.feature
gherkin/features/issue_614/: issue_614.feature
gherkin/features/issue_616/: issue_616.feature
gherkin/features/onboarding/: org_admin_onboard.feature
gherkin/features/privacy_dashboard/: individual_mobile_client.feature
gherkin/steps/: admin_logging.py  create_data_agreement.py  filter_data_agreements.py  getting_started.py  global_data_policy.py  individual_client.py  individual_onboard.py  issue_610.py  issue_612.py  issue_614.py  issue_616.py  org_admin_onboard.py  update_data_agreement.py
steps/: create_data_agreement.py  data_agreements.py  data_processing_auditor.py  delete_data_agreement.py  developer_api.py  filter_data_agreements.py  login.py  (+13 more)
(+16 files in other folders)
