[tool.poetry]
name = "gherkin"
version = "0.1.0"
description = ""
authors = ["George J Padayatti <george.padayatti@igrant.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
behave = "^1.2.6"
requests = "^2.31.0"
allure-behave = "^2.13.2"
jwcrypto = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
